[project]
name = "EVE_TEST_BOT"
version = "0.1.0"
description = "EVE_TEST_BOT"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_alconna", "nonebot_plugin_htmlrender", "nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry]
name = "nonebot-plugin-eve-tool"
version = "0.1.3"
description = "A NoneBot based plugin provides information query services for EVE online."
authors = ["zifox666 <zifox666@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.10.4"
Jinja2 = "^3.1.4"
Markdown = "^3.6"
MarkupSafe = "^2.1.5"
PyMySQL = "^1.1.1"
PyYAML = "^6.0.1"
Pygments = "^2.18.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.5"
aiomysql = "^0.2.0"
aioredis = "^2.0.1"
aiosignal = "^1.3.1"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
arclet-alconna = "^1.8.15"
arclet-alconna-tools = "^0.7.6"
async-timeout = "^4.0.3"
attrs = "^23.2.0"
certifi = "^2024.6.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
contourpy = "^1.2.1"
cycler = "^0.12.1"
dnspython = "^2.6.1"
email_validator = "^2.2.0"
fastapi = "^0.111.0"
fastapi-cli = "^0.0.4"
fonttools = "^4.53.0"
frozenlist = "^1.4.1"
greenlet = "^3.0.3"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.7"
importlib_metadata = "^7.1.0"
jieba = "^0.42.1"
kiwisolver = "^1.4.5"
loguru = "^0.7.2"
markdown-it-py = "^3.0.0"
matplotlib = "^3.9.0"
mdurl = "^0.1.2"
msgpack = "^1.0.8"
multidict = "^6.0.5"
nepattern = "^0.7.4"
nonebot-adapter-onebot = "^2.4.3"
nonebot-plugin-alconna = "^0.47.1"
nonebot-plugin-apscheduler = "^0.4.0"
nonebot-plugin-htmlrender = "^0.3.2"
nonebot-plugin-waiter = "^0.6.2"
nonebot2 = "^2.3.1"
numpy = "^2.0.0"
orjson = "^3.10.5"
packaging = "^24.1"
pillow = "^10.3.0"
pip = "^24.0"
playwright = "^1.44.0"
pydantic = "^2.7.4"
pydantic_core = "^2.18.4"
pyee = "^11.1.0"
pygtrie = "^2.5.0"
pymdown-extensions = "^10.8.1"
pyparsing = "^3.1.2"
pypng = "^0.20220715.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-markdown-math = "^0.8"
python-multipart = "^0.0.9"
pytz = "^2024.1"
qrcode = "^7.4.2"
requests = "^2.32.3"
rich = "^13.7.1"
scipy = "^1.13.1"
setuptools = "^69.5.1"
shellingham = "^1.5.4"
six = "^1.16.0"
sniffio = "^1.3.1"
starlette = "^0.37.2"
tarina = "^0.5.4"
tqdm = "^4.66.4"
typer = "^0.12.3"
typing_extensions = "^4.12.2"
tzdata = "^2024.1"
tzlocal = "^5.2"
ujson = "^5.10.0"
urllib3 = "^2.2.2"
uvicorn = "^0.30.1"
watchfiles = "^0.22.0"
websockets = "^12.0"
wheel = "^0.43.0"
win32-setctime = "^1.1.0"
yarl = "^1.9.4"
zipp = "^3.19.2"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
